--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">NeonTest</string>
+
+    <string name="send_money">Enviar Dinheiro</string>
+    <string name="transaction_history">Histórico de Envios</string>
 </resources>
