--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="send_money">Enviar Dinheiro</string>
     <string name="transaction_history">Histórico de Envios</string>
+    <string name="success_msg">Sucesso! Tudo correu bem por aqui :)</string>
+    <string name="error_msg">Acho que algo quebrou por aqui... Vamos consertar, tenta mais tarde, tá?</string>
 </resources>
